add db API
